# sfvtool

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh
include/: flags.hpp  sfv.hpp
src/: sfvtool.cpp
